--- a/package.json
+++ b/package.json
@@ -1,12 +1,4 @@
 {
-  "dependencies": {
-    "@tailwindcss/vite": "^4.0.3",
-    "bootstrap": "^5.3.3",
-    "tailwindcss": "^4.0.3",
-    "vite": "^6.0.11"
-  }
-}
-{
   "name": "your-project",
   "private": true,
   "version": "0.0.0",
@@ -17,6 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "vite": "^6.0.11"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.3"
   }
 }
